# inside-python

./: .gitignore  README.md  pyproject.toml
Homework_10/: AnimalFactory.py  Animals.py  __init__.py  factory.py  lottery_game.py  main.py  setup.py
Homework_11/: archive.py  gb_logger.py  matrix.py  rectangle.py
Homework_12/: student.py
Homework_13/: task1.py  task2.py  task3.py
Homework_14/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
Homework_15/: main.py
Homework_3/: task2.py  task3.py  task4.py
Homework_4/: task1.py  task2.py
Homework_5/: task1.py  task2.py  task3.py
Homework_6/: task2.py  task3.py  task3_2.py
Homework_7/: task1.py  task2.py
Homework_9/: equations.py  task2.py
Lesson_1/: main.py
Lesson_10/: task1.py  task2.py  task3.py
Lesson_11/: task1.py  task2.py
Lesson_12/: task1.py  task2.py  task3.py
Lesson_13/: task1.py  task2.py  task3.py
Lesson_14/: task1.py  task2.py  task3.py  task4.py  task5.py
Lesson_15/: task1.py  task2.py  task3.py
Lesson_2/: main.py
Lesson_3/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py
Lesson_4/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py
Lesson_5/: task1.py  task2.py  task3.py  task4.py  task5.py
Lesson_6/: task2.py  task8.py
Lesson_7/: task1.py  task2.py  task3.py  task4.py  task5.py  task7.py
Lesson_8/: mix.pickle  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  users.pickle
Lesson_9/: task1.py  task2.py  task3.py  task4.py
Serialization/: __init__.py  folder_walkr.py
(+7 files in other folders)
