[tool.poetry]
name = "inside-python"
version = "0.1.0"
description = ""
authors = ["Maksim Aleksanin <maksim.g00gle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
